--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
             "app/database/migrations",
             "app/database/seeds",
             "app/tests/TestCase.php"    
+        ],
+        "files": [
+            "app/helpers.php"
         ]
     },
     "scripts": {
