Add bootbox to bower

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "latest",
     "bootstrap": "latest",    
-    "font-awesome": "latest"
+    "font-awesome": "latest",
+    "bootbox": "makeusabrew/bootbox"
   }
 }
