--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^2.0.1",
     "gulp-sass": "^1.2.3",
-    "gulp-uglify": "^0.3.0",
-    "gulp-watch": "^2.0.0"
+    "gulp-uglify": "^0.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
