--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-jshint": "^1.6.1",
     "gulp-less": "^1.2.3",
     "gulp-minify-css": "^0.3.4",
+    "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^2.0.1",
     "gulp-sass": "^1.2.4",
