--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "dev-master",
-        "way/generators": "~2.0"
+        "way/generators": "~2.0",
+        "codeception/codeception": "2.*"
     },
     "autoload": {
         "classmap": [
