--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-        "illuminate/html": "5.0.*",
+        "laravelcollective/html": "~5.0",
         "doctrine/dbal": "2.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1",
         "barryvdh/laravel-ide-helper": "dev-master",
-        "way/generators": "~3.0"
+        "laracasts/generators": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
