--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1",
         "barryvdh/laravel-ide-helper": "dev-master",
+        "barryvdh/laravel-debugbar": "2.*",
         "laracasts/generators": "dev-master",
         "codeception/codeception": "~2.0"
 	},
