--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"laravelcollective/html": "~5.0",
 		"doctrine/dbal": "2.*",
-		"jenky/laravel-envloader": "~1.0"
+		"jenky/laravel-envloader": "~1.0",
+		"laracasts/flash": "~1.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
