--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "laravel-elixir": "*",
-    "gulp-autoprefixer": "0.0.7",
-    "gulp-concat": "^2.2.0",
-    "gulp-jshint": "^1.6.1",
-    "gulp-less": "^1.2.3",
-    "gulp-minify-css": "^0.3.4",
-    "gulp-plumber": "^0.6.6",
-    "gulp-rename": "^1.2.0",
-    "gulp-rev": "^2.0.1",
-    "gulp-sass": "^1.2.4",
-    "gulp-uglify": "^0.3.0"
+    "gulp": "*",
+    "gulp-autoprefixer": "*",
+    "gulp-concat": "*",
+    "gulp-jshint": "*",
+    "gulp-less": "*",
+    "gulp-minify-css": "*",
+    "gulp-plumber": "*",
+    "gulp-rename": "*",
+    "gulp-rev": "*",
+    "gulp-sass": "*",
+    "gulp-uglify": "*",
+    "del": "*"
   }
 }
