--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"barryvdh/laravel-ide-helper": "dev-master",
 		"barryvdh/laravel-debugbar": "2.*",
 		"laracasts/generators": "dev-master",
-		"codeception/codeception": "~2.0"
+		"codeception/codeception": "~2.0",
+		"filp/whoops": "~1.0"
 	},
 	"autoload": {
 		"classmap": [
