--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"laravelcollective/html": "~5.0",
 		"doctrine/dbal": "2.*",
 		"jenky/laravel-envloader": "~1.0",
-		"laracasts/flash": "~1.3"
+		"laracasts/flash": "~1.3",
+		"graham-campbell/exceptions": "~2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -17,8 +18,7 @@
 		"barryvdh/laravel-ide-helper": "dev-master",
 		"barryvdh/laravel-debugbar": "2.*",
 		"laracasts/generators": "dev-master",
-		"codeception/codeception": "~2.0",
-		"filp/whoops": "~1.0"
+		"codeception/codeception": "~2.0"
 	},
 	"autoload": {
 		"classmap": [
