--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*",
+		"php": ">=5.5.9",
+		"laravel/framework": "5.1.*",
 		"laravelcollective/html": "~5.0",
 		"doctrine/dbal": "2.*",
 		"jenky/laravel-envloader": "~1.0",
