--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
 		"graham-campbell/exceptions": "~2.0"
 	},
 	"require-dev": {
+		"fzaninotto/faker": "~1.4",
+		"mockery/mockery": "0.9.*",
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1",
 		"barryvdh/laravel-ide-helper": "dev-master",
@@ -48,8 +50,10 @@
 		"post-update-cmd": [
 			"php artisan optimize"
 		],
+		"post-root-package-install": [
+			"php -r \"copy('.env.example', '.env');\""
+		],
 		"post-create-project-cmd": [
-			"php -r \"copy('.env.example', '.env');\"",
 			"php artisan key:generate"
 		]
 	},
