--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"require": {
 		"php": ">=5.5.9",
 		"laravel/framework": "5.1.*",
-		"laravelcollective/html": "~5.0",
+		"laravelcollective/html": "5.1.*",
 		"doctrine/dbal": "2.*",
 		"jenky/laravel-envloader": "~1.0",
 		"laracasts/flash": "~1.3",
@@ -18,7 +18,7 @@
 		"mockery/mockery": "0.9.*",
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1",
-		"barryvdh/laravel-ide-helper": "dev-master",
+		"barryvdh/laravel-ide-helper": "~2.0",
 		"barryvdh/laravel-debugbar": "2.*",
 		"laracasts/generators": "dev-master",
 		"codeception/codeception": "~2.0"
