--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"doctrine/dbal": "2.*",
 		"jenky/laravel-envloader": "~1.0",
 		"laracasts/flash": "~1.3",
-		"graham-campbell/exceptions": "~5.0"
+		"graham-campbell/exceptions": "~5.0",
+		"rap2hpoutre/laravel-log-viewer": "0.4.*"
 	},
 	"require-dev": {
 		"fzaninotto/faker": "~1.4",
