--- a/composer.json
+++ b/composer.json
@@ -1,64 +1,63 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
-	"keywords": ["framework", "laravel"],
-	"license": "MIT",
-	"type": "project",
-	"require": {
-		"php": ">=5.5.9",
-		"laravel/framework": "5.1.*",
-		"laravelcollective/html": "5.1.*",
-		"doctrine/dbal": "2.*",
-		"jenky/laravel-envloader": "~1.0",
-		"laracasts/flash": "~1.3",
-		"graham-campbell/exceptions": "~5.0",
-		"rap2hpoutre/laravel-log-viewer": "0.4.*"
-	},
-	"require-dev": {
-		"fzaninotto/faker": "~1.4",
-		"mockery/mockery": "0.9.*",
-		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1",
-		"barryvdh/laravel-ide-helper": "~2.0",
-		"barryvdh/laravel-debugbar": "2.*",
-		"laracasts/generators": "dev-master",
-		"codeception/codeception": "~2.0"
-	},
-	"autoload": {
-		"classmap": [
-			"database"
-		],
-		"files": [
-			"app/Helpers/helpers.php"            
-		],
-		"psr-4": {
-			"App\\": "app/"
-		}
-	},
-	"autoload-dev": {
-		"classmap": [
-			"tests/TestCase.php"
-		]
-	},
-	"scripts": {
-		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"pre-update-cmd": [
-			"php artisan clear-compiled"
-		],
-		"post-update-cmd": [
-			"php artisan optimize"
-		],
-		"post-root-package-install": [
-			"php -r \"copy('.env.example', '.env');\""
-		],
-		"post-create-project-cmd": [
-			"php artisan key:generate"
-		]
-	},
-	"config": {
-		"preferred-install": "dist"
-	}
+    "name": "laravel/laravel",
+    "description": "The Laravel Framework.",
+    "keywords": ["framework", "laravel"],
+    "license": "MIT",
+    "type": "project",
+    "require": {
+        "php": ">=5.5.9",
+        "laravel/framework": "5.1.*",
+        "laravelcollective/html": "5.1.*",
+        "doctrine/dbal": "2.*",
+        "jenky/laravel-envloader": "~1.0",
+        "laracasts/flash": "~1.3",
+        "graham-campbell/exceptions": "~5.0",
+        "arcanedev/log-viewer": "~3.0"
+    },
+    "require-dev": {
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~4.0",
+        "phpspec/phpspec": "~2.1",
+        "barryvdh/laravel-ide-helper": "~2.0",
+        "barryvdh/laravel-debugbar": "2.*",
+        "codeception/codeception": "~2.0"
+    },
+    "autoload": {
+        "classmap": [
+            "database"
+        ],
+        "files": [
+            "app/Helpers/helpers.php"            
+        ],
+        "psr-4": {
+            "App\\": "app/"
+        }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php"
+        ]
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize"
+        ],
+        "pre-update-cmd": [
+            "php artisan clear-compiled"
+        ],
+        "post-update-cmd": [
+            "php artisan optimize"
+        ],
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ]
+    },
+    "config": {
+        "preferred-install": "dist"
+    }
 }
