--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-        "laravelcollective/html": "5.1.*",
+        "laravel/framework": "5.2.*",
+        "laravelcollective/html": "dev-master",
         "doctrine/dbal": "~2.4",
         "jenky/laravel-envloader": "~1.0",
         "laracasts/flash": "~1.3",
@@ -18,7 +18,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
+        "symfony/css-selector": "2.8.*|3.0.*",
+        "symfony/dom-crawler": "2.8.*|3.0.*",
         "barryvdh/laravel-ide-helper": "~2.0",
         "barryvdh/laravel-debugbar": "2.*",
         "codeception/codeception": "~2.0"
