--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/dbal": "~2.4",
         "jenky/laravel-envloader": "~1.0",
         "laracasts/flash": "~1.3",
-        "graham-campbell/exceptions": "~5.0",
+        "graham-campbell/exceptions": "~7.0",
         "arcanedev/log-viewer": "~3.0"
     },
     "require-dev": {
@@ -22,6 +22,7 @@
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "barryvdh/laravel-ide-helper": "~2.0",
         "barryvdh/laravel-debugbar": "2.*",
+        "filp/whoops": "~1.1",
         "codeception/codeception": "~2.0"
     },
     "autoload": {
