--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
+APP_URL=http://localhost
+APP_TITLE=Laravel
 
 DB_HOST=127.0.0.1
 DB_DATABASE=homestead
