--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 APP_TITLE=Laravel
+APP_LOG=daily
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
