--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "barryvdh/laravel-ide-helper": "~2.0",
         "barryvdh/laravel-debugbar": "2.*",
         "filp/whoops": "~2.0",
+        "jenky/laravel-generators": "^1.0",
         "codeception/codeception": "~2.0"
     },
     "autoload": {
