--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
         "doctrine/dbal": "~2.4",
         "jenky/laravel-envloader": "~1.0",
         "laracasts/flash": "~1.3",
-        "graham-campbell/exceptions": "~8.0",
+        "graham-campbell/exceptions": "^8.0",
         "arcanedev/log-viewer": "~3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "phpunit/phpunit": "~5.0",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*",
         "barryvdh/laravel-ide-helper": "~2.0",
         "barryvdh/laravel-debugbar": "2.*",
         "filp/whoops": "~2.0",
