--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,6 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_TITLE=Laravel
 APP_LOG=daily
 
 DB_CONNECTION=mysql
@@ -13,6 +12,7 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
@@ -27,3 +27,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+PUSHER_KEY=
+PUSHER_SECRET=
+PUSHER_APP_ID=
