--- a/composer.json
+++ b/composer.json
@@ -5,26 +5,23 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "laravelcollective/html": "5.2.*",
-        "doctrine/dbal": "~2.4",
-        "jenky/laravel-envloader": "~1.0",
-        "laracasts/flash": "~1.3",
-        "graham-campbell/exceptions": "^8.0",
-        "arcanedev/log-viewer": "~3.0"
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
+        "doctrine/dbal": "^2.5",
+        "jenky/laravel-envloader": "^1.1",
+        "laracasts/flash": "^2.0",
+        "graham-campbell/exceptions": "^9.0",
+        "arcanedev/log-viewer": "^3.10"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
-        "barryvdh/laravel-ide-helper": "~2.0",
-        "barryvdh/laravel-debugbar": "2.*",
-        "filp/whoops": "~2.0",
-        "jenky/laravel-generators": "^1.0",
-        "codeception/codeception": "~2.0"
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*",
+        "barryvdh/laravel-debugbar": "^2.2",
+        "filp/whoops": "^2.0",
+        "jenky/laravel-generators": "^1.0"
     },
     "autoload": {
         "classmap": [
@@ -43,6 +40,12 @@
         ]
     },
     "scripts": {
+        "post-root-package-install": [
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
@@ -50,12 +53,6 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
-        ],
-        "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
         ]
     },
     "config": {
