--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
+        "laravelcollective/html": "5.3.*",
         "doctrine/dbal": "^2.5",
         "jenky/laravel-envloader": "^1.1",
         "laracasts/flash": "^2.0",
