--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "5.3.*",
         "doctrine/dbal": "^2.5",
-        "jenky/laravel-envloader": "^1.1",
         "laracasts/flash": "^2.0",
         "graham-campbell/exceptions": "^9.0",
         "arcanedev/log-viewer": "^4.1",
         "barryvdh/laravel-cors": "^0.8.2",
-        "jenky/laravel-api-helper": "^1.1"
+        "jenky/laravel-envloader": "^1.1",
+        "jenky/laravel-api-helper": "^1.1",
+        "jenky/laravel-api": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
