--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,19 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
-        "laravelcollective/html": "5.3.*",
+        "laravel/framework": "5.4.*",
+        "laravel/tinker": "~1.0",
         "doctrine/dbal": "^2.5",
         "jenky/laravel-envloader": "^1.1",
         "laracasts/flash": "^2.0",
-        "graham-campbell/exceptions": "^9.0",
+        "graham-campbell/exceptions": "^9.3",
         "arcanedev/log-viewer": "^4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
-        "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*",
-        "barryvdh/laravel-debugbar": "^2.2",
+        "barryvdh/laravel-debugbar": "^2.3",
         "filp/whoops": "^2.0",
         "jenky/laravel-generators": "^1.0"
     },
@@ -36,9 +34,9 @@
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php"
-        ]
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
     "scripts": {
         "post-root-package-install": [
