--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
+        "arcanedev/log-viewer": "^4.2",
         "doctrine/dbal": "^2.5",
+        "graham-campbell/exceptions": "^9.3",
         "jenky/laravel-envloader": "^1.1",
         "laracasts/flash": "^2.0",
-        "graham-campbell/exceptions": "^9.3",
-        "arcanedev/log-viewer": "^4.1"
+        "laravel/framework": "5.4.*",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
