--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     "require": {
         "php": ">=5.6.4",
         "arcanedev/log-viewer": "^4.2",
+        "barryvdh/laravel-cors": "^0.8.5",
         "doctrine/dbal": "^2.5",
         "graham-campbell/exceptions": "^9.3",
+        "jenky/laravel-api": "^1.0",
         "jenky/laravel-envloader": "^1.1",
         "laracasts/flash": "^2.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
-        "barryvdh/laravel-cors": "^0.8.2",
-        "jenky/laravel-api": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
