--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,21 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "arcanedev/log-viewer": "^4.3",
-        "doctrine/dbal": "^2.5",
-        "graham-campbell/exceptions": "^9.3",
-        "jenky/laravel-envloader": "^1.1",
+        "php": ">=7.0.0",
+        "arcanedev/log-viewer": "^4.4",
+        "doctrine/dbal": "^2.6",
+        "fideloper/proxy": "~3.3",
+        "jenky/laravel-envloader": "^1.2",
         "laracasts/flash": "^3.0",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "5.4.*"
+        "laravelcollective/html": "5.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "barryvdh/laravel-debugbar": "^2.3",
+        "phpunit/phpunit": "~6.0",
+        "barryvdh/laravel-debugbar": "^3.0",
         "filp/whoops": "^2.0",
         "jenky/laravel-generators": "^1.0"
     },
@@ -40,22 +40,23 @@
             "Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+            ]
+        }
+    },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "@php artisan key:generate"
         ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
-        ],
-        "test": "vendor/bin/phpunit --colors=always"
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
+        ]
     },
     "config": {
         "preferred-install": "dist",
