--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,19 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "arcanedev/log-viewer": "^4.4",
+        "php": ">=7.1.3",
         "doctrine/dbal": "^2.6",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "~4.0",
         "jenky/laravel-envloader": "^1.2",
         "laracasts/flash": "^3.0",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
-        "laravelcollective/html": "5.5.*"
+        "laravel/framework": "5.6.*",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
+        "nunomaduro/collision": "~1.1",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0",
+        "phpunit/phpunit": "~7.0",
         "symfony/thanks": "^1.0",
         "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "^2.0",
@@ -63,5 +62,7 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
