--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "devDependencies": {
+  "dependencies": {
     "axios": "^0.17",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.1",
+    "bootstrap": "^4.0.0",
+    "popper.js": "^1.12",
     "jquery": "^3.2",
-    "laravel-mix": "^2.0",
     "lodash": "^4.17.4",
     "vue": "^2.5.7"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1",
+    "laravel-mix": "^2.0"
   }
 }
