--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "jenky/laravel-envloader": "^1.2",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "5.6.*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
