--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,9 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "test": [
+            "vendor/bin/phpunit --colors=always"
         ]
     },
     "config": {
