--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,8 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "^4.0",
-        "laracasts/flash": "^3.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "5.6.*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
