--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "laravel-mix": "^4.0.7",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.21"
   }
 }
