--- a/package.json
+++ b/package.json
@@ -19,10 +19,25 @@
   },
   "devDependencies": {
     "cross-env": "^5.1",
+    "husky": "^2.2.0",
     "laravel-mix": "^4.0.7",
+    "lint-staged": "^8.1.5",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.php": [
+        "php ./vendor/bin/php-cs-fixer fix --config .php_cs",
+        "git add"
+      ]
+    }
   }
 }
