--- a/.editorconfig
+++ b/.editorconfig
@@ -11,11 +11,5 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.yml]
-indent_size = 2
-
-[*.js]
-indent_size = 2
-
-[*.vue]
+[*.{yml,yaml,js,vue,scss}]
 indent_size = 2
