--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19",
-    "bootstrap": "^4.1.0",
-    "jquery": "^3.2",
-    "lodash": "^4.17.13",
-    "popper.js": "^1.12",
-    "vue": "^2.5.7"
+    "lodash": "^4.17.13"
   },
   "devDependencies": {
     "cross-env": "^5.1",
